--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask
-flask_mysqldb
-MySQLdb-cursors
+flask-mysqldb
+mysqlclient
+gunicorn
+python-dotenv
+cloudinary
 fpdf
 openpyxl
-gunicorn
-cloudinary
-python-dotenv
